syntax = "proto3";

package frame;

message Header {
  string key = 1;
  string value = 2;
}

message Frame {
  uint64 seq_id = 1;
  uint64 log_id = 2;
  int32 service = 3;
  int32 method = 4;
  repeated Header headers = 5;
  string payload_encoding = 6;
  string payload_type = 7;
  bytes payload = 8;
  string log_id_new = 9;
}
